# delirium_cl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  preferences.cmake
inc/cl/: cl_ext_nvidia.h
inc/dlm/: allocator.hpp
inc/dlm/cl/: base.hpp  controllers.hpp  device.hpp  deviceInfo.hpp  kernel.hpp  memobj.hpp  memobjPool.hpp  memory.hpp
inc/dlm/env/: macro.h  system.h
samples/: CMakeLists.txt  device.cpp  grammian.cl  grammian.cpp  init.cpp  main.cpp  program.cpp  simple.cl  tests.cpp  timer.hpp  utils.cpp  utils.hpp
samples/benchmark/: CMakeLists.txt  main.cpp
samples/graphics/: CMakeLists.txt  main.cpp
samples/kernels/: simple.cl
samples/openclInfo/: CMakeLists.txt  main.cpp
samples/pool/: CMakeLists.txt  main.cpp
samples/utils/: benchmark.hpp  device.cpp  program.cpp  tasks.hpp  utils.hpp
src/: CMakeLists.txt
src/device/: controllerAMD.cpp  controllerGeneric.cpp  controllerIntel.cpp  controllerNVidia.cpp  controllerNvidia.cpp  device.cpp  deviceInfo.cpp  deviceInfoAMD.cpp  deviceInfoGeneric.cpp  deviceInfoIntel.cpp  deviceInfoNvidia.cpp
src/memobj/: device.cpp  generic.cpp  host.cpp  memobj.cpp  memobjPool.cpp
src/memory/: device.cpp  generic.cpp  host.cpp  memory.cpp
unittests/: CMakeLists.txt  main.cpp
